# CppExamples

zadanka_r1/: CMakeLists.txt  main.cpp
